--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "React App",
-  "name": "Create React App Sample",
+  "short_name": "Martin's Blog",
+  "name": "Martin's Blog - Look At That, A Blog!",
   "icons": [
     {
       "src": "favicon.ico",
